...
    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/home"
        android:title="Balance" />

    <item
        android:id="@+id/navigation_months"
        android:icon="@drawable/months"
        android:title="Months" />

    <item
        android:id="@+id/navigation_permanents"
        android:icon="@drawable/clock"
...
